# opengl4-tutorials-mbsoftworks

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  common_properties_debug.props  common_properties_debug64.props  common_properties_release.props  common_properties_release64.props  download_prerequisities.bat  download_prerequisities.sh  opengl4-tutorials-mbsoftworks-vs2017.sln  opengl4-tutorials-mbsoftworks-vs2019.sln  opengl4-tutorials-mbsoftworks.sln  properties_debug.props  properties_debug64.props  properties_release.props  properties_release64.props  unix_setup.sh  windows_setup.sh
001-creating-opengl4-window/: 001-creating-opengl4-window.cpp  001-creating-opengl4-window.h  001-creating-opengl4-window.vcxproj  001-creating-opengl4-window.vcxproj.filters  CMakeLists.txt  main.cpp  main_windows.cpp
002-first-shader/: 002-first-shader.cpp  002-first-shader.h  002-first-shader.vcxproj  002-first-shader.vcxproj.filters  CMakeLists.txt  main.cpp  main_windows.cpp
003-adding-colors/: 003-adding-colors.cpp  003-adding-colors.h  003-adding-colors.vcxproj  003-adding-colors.vcxproj.filters  CMakeLists.txt  main.cpp  main_windows.cpp
004-entering-third-dimension/: 004-entering-third-dimension.cpp  004-entering-third-dimension.h  004-entering-third-dimension.vcxproj  004-entering-third-dimension.vcxproj.filters  CMakeLists.txt  main.cpp  main_windows.cpp
005-camera-pt1-simple-walking-camera/: 005-camera-pt1-simple-walking-camera.cpp  005-camera-pt1-simple-walking-camera.h  005-camera-pt1-simple-walking-camera.vcxproj  005-camera-pt1-simple-walking-camera.vcxproj.filters  CMakeLists.txt  main.cpp  main_windows.cpp
006-camera-pt2-flying-camera/: 006-camera-pt2-flying-camera.cpp  006-camera-pt2-flying-camera.h  006-camera-pt2-flying-camera.vcxproj  006-camera-pt2-flying-camera.vcxproj.filters  CMakeLists.txt  main.cpp  main_windows.cpp
007-textures-pt1-single-texture/: 007-textures-pt1-single-texture.cpp  007-textures-pt1-single-texture.h  007-textures-pt1-single-texture.vcxproj  007-textures-pt1-single-texture.vcxproj.filters  CMakeLists.txt  main.cpp  main_windows.cpp
008-textures-pt2-multitexturing/: 008-textures-pt2-multitexturing.cpp  008-textures-pt2-multitexturing.h  008-textures-pt2-multitexturing.vcxproj  008-textures-pt2-multitexturing.vcxproj.filters  CMakeLists.txt  main.cpp  main_windows.cpp
009-orthographic-2D-projection/: 009-orthographic-2D-projection.cpp  009-orthographic-2D-projection.h  009-orthographic-2D-projection.vcxproj  009-orthographic-2D-projection.vcxproj.filters  CMakeLists.txt  main.cpp  main_windows.cpp
010-first-great-refactoring/: 010-first-great-refactoring.cpp  010-first-great-refactoring.h  010-first-great-refactoring.vcxproj  010-first-great-refactoring.vcxproj.filters  CMakeLists.txt  HUD010.cpp  HUD010.h  main.cpp  main_windows.cpp
011-indexed-rendering-torus/: 011-indexed-rendering-torus.cpp  011-indexed-rendering-torus.h  011-indexed-rendering-torus.vcxproj  011-indexed-rendering-torus.vcxproj.filters  CMakeLists.txt  main.cpp  main_windows.cpp
012-freetype-fonts-pt1/: 012-freetype-fonts-pt1.cpp  012-freetype-fonts-pt1.h  012-freetype-fonts-pt1.vcxproj  012-freetype-fonts-pt1.vcxproj.filters  CMakeLists.txt  HUD012.cpp  HUD012.h  main.cpp  main_windows.cpp
013-blending-pt1/: 013-blending-pt1.cpp  013-blending-pt1.h  013-blending-pt1.vcxproj  013-blending-pt1.vcxproj.filters  CMakeLists.txt  HUD013.cpp  HUD013.h  main.cpp  main_windows.cpp
014-normals-diffuse-lighting/: 014-normals-diffuse-lighting.cpp  014-normals-diffuse-lighting.h  014-normals-diffuse-lighting.vcxproj  014-normals-diffuse-lighting.vcxproj.filters  CMakeLists.txt  HUD014.cpp  HUD014.h  main.cpp  main_windows.cpp
015-geometry-shaders/: 015-geometry-shaders.cpp  015-geometry-shaders.h  015-geometry-shaders.vcxproj  015-geometry-shaders.vcxproj.filters  CMakeLists.txt  HUD015.cpp  HUD015.h  main.cpp
016-heightmap-pt1-random-terrain/: 016-heightmap-pt1-random-terrain.cpp  016-heightmap-pt1-random-terrain.h  016-heightmap-pt1-random-terrain.vcxproj  016-heightmap-pt1-random-terrain.vcxproj.filters  CMakeLists.txt  HUD016.cpp  HUD016.h  main.cpp  main_windows.cpp
017-heightmap-pt2-from-image-and-skybox/: 017-heightmap-pt2-from-image-and-skybox.cpp  017-heightmap-pt2-from-image-and-skybox.h  017-heightmap-pt2-from-image-and-skybox.vcxproj  017-heightmap-pt2-from-image-and-skybox.vcxproj.filters  CMakeLists.txt  HUD017.cpp  HUD017.h  main.cpp  main_windows.cpp
018-heightmap-pt3-multiple-layers/: 018-heightmap-pt3-multiple-layers.cpp  018-heightmap-pt3-multiple-layers.h  018-heightmap-pt3-multiple-layers.vcxproj  018-heightmap-pt3-multiple-layers.vcxproj.filters  CMakeLists.txt  HUD018.cpp  HUD018.h  main.cpp  main_windows.cpp
019-assimp-model-loading/: 019-assimp-model-loading.cpp  019-assimp-model-loading.h  019-assimp-model-loading.vcxproj  019-assimp-model-loading.vcxproj.filters  CMakeLists.txt  HUD019.cpp  HUD019.h  main.cpp  main_windows.cpp
020-fog/: 020-fog.cpp  020-fog.h  020-fog.vcxproj  020-fog.vcxproj.filters  CMakeLists.txt  HUD020.cpp  HUD020.h  main.cpp  main_windows.cpp
021-specular-highlight/: 021-specular-highlight.cpp  021-specular-highlight.h  021-specular-highlight.vcxproj  021-specular-highlight.vcxproj.filters  CMakeLists.txt  HUD021.cpp  HUD021.h  main.cpp  main_windows.cpp
022-cylinder-and-sphere/: 022-cylinder-and-sphere.cpp  022-cylinder-and-sphere.h  022-cylinder-and-sphere.vcxproj  022-cylinder-and-sphere.vcxproj.filters  CMakeLists.txt  HUD022.cpp  HUD022.h  main.cpp  main_windows.cpp  planet.cpp  planet.h  spaceStation.cpp  spaceStation.h
023-point-lights/: 023-point-lights.cpp  023-point-lights.h  023-point-lights.vcxproj  023-point-lights.vcxproj.filters  CMakeLists.txt  HUD023.cpp  HUD023.h  main.cpp  main_windows.cpp
024-uniform-buffer-object/: 024-uniform-buffer-object.cpp  024-uniform-buffer-object.h  024-uniform-buffer-object.vcxproj  024-uniform-buffer-object.vcxproj.filters  CMakeLists.txt  HUD024.cpp  HUD024.h  main.cpp  (+2 more)
dependencies/windows-freetype2-custom-cmake/: CMakeLists.txt
(+207 files in other folders)
